--- a/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-assets.tpl.html
+++ b/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-assets.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade-content">
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <div class="inner">
@@ -18,7 +18,7 @@
                         <input type="file" multiple uploader="uploader" nv-file-select tabindex="-1">
                         <input type="text" readonly="">
                         <button class="btn __file" type="button" onclick="$('input[type=file]').trigger('click')">
-                            <i class="btn-ico fa fa-image"></i>
+                            <i class="btn-ico fas fa-image"></i>
                         </button>
                     </div>
                 </form>
@@ -46,12 +46,12 @@
                                 <ul class="menu __actions">
                                     <li class="menu-item" ng-click="removeAction(data)" va-permission="{{blade.updatePermission}}">
                                         <a class="menu-link" title="Remove">
-                                            <i class="menu-ico fa fa-trash-o"></i>
+                                            <i class="menu-ico fas fa-trash-alt"></i>
                                         </a>
                                     </li>
                                     <li class="menu-item" ng-click="copyUrl(data)">
                                         <a class="menu-link" title="Copy link">
-                                            <i class="menu-ico fa fa-link"></i>
+                                            <i class="menu-ico fas fa-link"></i>
                                         </a>
                                     </li>
                                 </ul>
