--- a/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
+++ b/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade-static __bottom __quote">
+<div class="blade-static __bottom __quote">
     <div class="clearfix">
         <div class="column">
             <fieldset ng-disabled="blade.isLocked()">
@@ -102,7 +102,7 @@
                                 <td class="table-col">
                                     <div class="product-img">
                                         <div class="image" style="background-image: url({{data.imageUrl}})" ng-if="data.imageUrl" ng-click="openItemDetail(data)"></div>
-                                        <i class="table-ico fa fa-image" ng-if="!data.imageUrl" />
+                                        <i class="table-ico fas fa-image" ng-if="!data.imageUrl" />
                                     </div>
                                 </td>
                                 <td class="table-col">
