--- a/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
+++ b/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quotes-list.tpl.html
@@ -26,7 +26,10 @@
                         name: 'createdDate', displayName: 'quotes.blades.quotes-list.labels.created',
                         sort: { direction: uiGridConstants.DESC },
                         width: 87, cellTemplate: 'am-time-ago.cell.html'
-                    }
+                    },
+                    { name: 'cancelledDate', cellTemplate: 'am-time-ago.cell.html' },
+                    { name: 'expirationDate', cellTemplate: 'am-time-ago.cell.html' },
+                    { name: 'reminderDate', cellTemplate: 'am-time-ago.cell.html' }
                 ]})">
                 <div ui-grid="gridOptions" ui-grid-auto-resize ui-grid-save-state ui-grid-selection ui-grid-resize-columns ui-grid-move-columns ui-grid-pinning ui-grid-height></div>
                 <ul class="menu __context" role="menu" id="quo_menu">
