--- a/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
+++ b/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
@@ -68,12 +68,13 @@
                             <div class="form-group">
                                 <label class="form-label">{{ 'quotes.blades.quote-detail.labels.assigned-to' | translate }}</label>
                                 <div class="form-input">
-                                    <ui-select ng-model="blade.currentEntity.employeeId" ng-disabled="blade.isLocked()">
-                                        <ui-select-match placeholder="{{ 'quotes.blades.quote-detail.placeholders.assigned-to' | translate }}">{{$select.selected.fullName}}</ui-select-match>
-                                        <ui-select-choices repeat="x.id as x in employees | filter: { fullName: $select.search }">
-                                            <span ng-bind-html="x.fullName | highlight: $select.search"></span>
-                                        </ui-select-choices>
-                                    </ui-select>
+                                  <ui-scroll-drop-down data="blade.fetchEmployees(criteria)"
+                                                       ng-model="blade.currentEntity.employeeId"
+                                                       on-select="blade.currentEntity.employeeName = item.name"
+                                                       on-remove="blade.currentEntity.employeeName = undefined"
+                                                       placeholder="'quotes.blades.quote-detail.placeholders.assigned-to'"
+                                                       disabled="blade.currentEntity.isLocked">
+                                  </ui-scroll-drop-down>
                                 </div>
                             </div>
                         </div>
