--- a/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
+++ b/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-detail.tpl.html
@@ -40,7 +40,7 @@
                                       {{ blade.currentEntity.organizationName || blade.currentEntity.organizationId }}
                                     </a>
                                     <span ng-if="!blade.currentEntity.organizationId">
-                                      {{ 'quotes.blades.quoteDetail.labels.not-defined' | translate }}
+                                      {{ 'quotes.blades.quote-detail.labels.not-defined' | translate }}
                                     </span>
                                   </label>
                                 </div>
