--- a/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
+++ b/src/VirtoCommerce.QuoteModule.Web/Scripts/blades/quote-items.tpl.html
@@ -22,7 +22,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="table-item" ng-repeat-start="data in blade.currentEntity.items" ng-click='selectItem(data)'>
+                            <tr class="table-item" ng-repeat-start="data in blade.currentEntity.items">
                                 <td class="table-col">
                                     <label class="form-control __checkbox">
                                         <input type="checkbox" ng-model="data.$selected">
@@ -74,7 +74,7 @@
                                 </td>
                             </tr>
                             <tr ng-repeat-end class="table-item" ng-class="{'__selected': data.id === selectedNodeId}" ng-click='selectItem(data)'>
-                                <td class="table-head" colspan="8" ng-click="openItemDetail(data)">
+                                <td class="table-head" colspan="8">
                                     <span>{{ 'quotes.blades.quote-items.labels.sku' | translate }}: {{data.sku}}. {{ 'quotes.blades.quote-items.labels.product' | translate }}: {{data.name}}</span>
                                 </td>
                             </tr>
